--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "engines": {
     "node": "0.8.x",
-    "npm":  "1.22x"
+    "npm":  "1.2.x"
   }.
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
