--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "gitHead": "d9b33cdba16273341bf8f2be7b1c7766b5d24aa8",
   "dependencies": {
     "hapi": "~0.14.1",
-    "orm": "~2.0.2"
+    "sequelize": "~1.6.0-beta4",
+    "mysql": "~2.0.0-alpha7"
   },
   "devDependencies": {
     "mocha": "~1.8.1"
