--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "1.2.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
