--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "gitHead": "d9b33cdba16273341bf8f2be7b1c7766b5d24aa8",
   "dependencies": {
     "hapi": "~0.14.2",
-    "sequelize": "~1.6.0-beta4",
+    "sequelize": "~1.6.0",
     "mysql": "~2.0.0-alpha7",
     "handlebars": "~1.0.10",
     "forever-monitor": "~1.1.0",
@@ -28,6 +28,6 @@
     "async": "~0.2.6"
   },
   "devDependencies": {
-    "mocha": "~1.8.2"
+    "mocha": "~1.9.0"
   }
 }
