--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ node_js:
 
 before_script:
   - export NODE_ENV=test_travis
-  - mysql -e 'create database test_travis_mapservice;'
+  - mysql -e 'create database test_mapservice;'
